--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: aqua;
+    background-color: rgb(15, 15, 15);
     color: #fff;
     font-family: "Lato", sans-serif;
   }
