--- a/main.css
+++ b/main.css
@@ -52,6 +52,15 @@ body {
     display: none;
   }
 
+  #back-button{
+    position: absolute;
+    bottom: 20px;
+    right: calc(50% - 50px);
+    width: 100px;
+    height: 30px;
+    display: none;
+  }
+
   #VRButton{
     margin-bottom: 70px !important;
   }
