--- a/main.css
+++ b/main.css
@@ -54,7 +54,7 @@ body {
 
   #back-button{
     position: absolute;
-    bottom: 10px;
+    top: 10px;
     left: calc(50% - 50px);
     width: 100px;
     height: 30px;
