--- a/main.css
+++ b/main.css
@@ -53,7 +53,14 @@ body {
   }
 
   #back-button{
-    margin-bottom: 70px !important;
+     #back-button{
+    position: absolute;
+    top: 20px;
+    left: calc(50% - 50px);
+    width: 100px;
+    height: 30px;
+    display: none;
+  }
   }
 
   #VRButton{
