--- a/main.css
+++ b/main.css
@@ -54,8 +54,8 @@ body {
 
   #back-button{
     position: absolute;
-    top: 20px;
-    right: calc(50% - 50px);
+    top: 0px;
+    left: calc(50% - 50px);
     width: 100px;
     height: 30px;
     display: none;
