--- a/main.css
+++ b/main.css
@@ -56,7 +56,7 @@ body {
   #back-button{
     position: absolute;
     top: 20px;
-    left: calc(50% - 50px);
+    right: calc(50% - 50px);
     width: 100px;
     height: 30px;
     display: none;
