--- a/main.css
+++ b/main.css
@@ -1,7 +1,6 @@
-
 body {
-    background-color: rgb(30, 30, 30);
-    color: #fff;
+    background-color: rgb(153, 153, 153);
+    color: #ffffff;
     font-family: "Lato", sans-serif;
   }
   
@@ -12,7 +11,7 @@ body {
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #111;
+    background-color: #0d3b19;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 40px;
@@ -22,7 +21,7 @@ body {
     padding: 6px 6px 6px 32px;
     text-decoration: none;
     font-size: 14px;
-    color: #818181;
+    color: #ffffff;
     display: block;
     transition: 0.3s;
   }
