--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
-    background-color: rgb(153, 153, 153);
-    color: #ffffff;
+    background-color: rgb(15, 15, 15);
+    color: #fff;
     font-family: "Lato", sans-serif;
   }
   
@@ -11,17 +11,17 @@ body {
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #0d3b19;
+    background-color: #111;
     overflow-x: hidden;
     transition: 0.5s;
-    padding-top: 40px;
+    padding-top: 60px;
   }
   
   .sidenav a {
-    padding: 6px 6px 6px 32px;
+    padding: 8px 8px 8px 32px;
     text-decoration: none;
-    font-size: 14px;
-    color: #ffffff;
+    font-size: 25px;
+    color: #818181;
     display: block;
     transition: 0.3s;
   }
@@ -39,7 +39,7 @@ body {
   }
   
   @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 20px;}
+    .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
   }
 
@@ -48,16 +48,7 @@ body {
     bottom: 20px;
     left: calc(50% - 50px);
     width: 100px;
-    height: 30px;
-    display: none;
-  }
-
-  #back-button{
-    position: absolute;
-    top: 20px;
-    right: calc(50% - 50px);
-    width: 100px;
-    height: 30px;
+    height: 35px;
     display: none;
   }
 
